Started writing Unicorn domain.

--- a/Unicorn - A System for Searching the Social Graph.tex
+++ b/Unicorn - A System for Searching the Social Graph.tex
@@ -11,6 +11,8 @@
 
 \begin{document}
 
-Test
+\section{Unicorn: A System for Searching the Social Graph}
+
+Unicorn is a in-memory indexing system developed by Facebook Inc. used for social graph retrieval and social ranking. It's built to support trillions of edges, billions of users and thousands of servers. Unicorn also supports real-time updates and per-edge privacy (even though privacy is enforced by the front-end) while serving billions of queries each day at low latencies.
 
 \end{document}
