Finished writing results of Unicorn for now.

--- a/Unicorn - A System for Searching the Social Graph.tex
+++ b/Unicorn - A System for Searching the Social Graph.tex
@@ -17,7 +17,7 @@ The domain area of [Curtiss et al.] is social graph search and retrieval. Unicor
 
 \noindent According to [Curtiss et al.] there exist similar search indexing systems, but no one that is initially built to support social graph search and with the scale of Unicorn both in data volume and query volume. Hence, the motivation behind Unicorn was to build a indexing system specific for social graph purposes. By building a specialized indexing system for the Facebook back-end, Facebook-specific properties could be incorporated into the design. Hence, choices such as representing the social graph as an adjacency list because of observations that the social graph is sparse (average number of friends is 130) \textcolor{red}{The paper says that the motivation is in section 2-5, but I'm not sure if this should rather be in the ''techniques section"}.\\
 
-\noindent There is no doubt that Facebook is an extremely successful company, that people love to use. It is therefore hard to criticize a system which everyone uses daily, myself included. However, the paper is written more like a sales-pitch than an actual research paper. Although it briefly mentions other systems in the ''Related Work'' section it does not compare its performance with these systems. When explaining different angels of trying to implement friends-of-friends efficiently for example, they only compare their proposals to the most basic, brute-force solution, of storing friends-of-friend as a separate list for each user. 
+\noindent There is no doubt that Facebook is an extremely successful company, that people love to use. It is therefore hard to criticize a system which everyone uses daily, myself included. However, the paper is written more like a sales-pitch than an actual research paper. Although it briefly mentions other systems in the ''Related Work'' section it does not compare its performance with these systems. When explaining different angels of trying to implement friends-of-friends efficiently for example, they only compare their proposals to the most basic, brute-force solution, of storing friends-of-friend as a separate list for each user. I also miss an acknowledgement of short-comings and future improvements. As an example, they briefly mention that letting the front-end deal with privacy filtering imposes an modest efficiency penalty, but then they jump right to defending this choice, without any deliberation about how this could be handled differently.
 
 % Built with facebook in mind. Social graph space, even trilling of edges - therefore adjecency list.
 % Needs to support privacy fast. Real-time queries. 
