Started writing about Carbonite domain.

--- a/Efficient Replica Maintenance for Distributed Storage Systems.tex
+++ b/Efficient Replica Maintenance for Distributed Storage Systems.tex
@@ -11,6 +11,10 @@
 
 \begin{document}
 
-Test
+\section*{Efficient Replica Maintenance for Distributed Storage Systems}
+
+The area of focus of the Carbonite algorithm is durably and cost-efficiently storing of immutable object in a system that aggregates the disks of many Internet nodes. Hence, Carbonite is a replication algorithm for large storage systems. \textcolor{red}{More.}\\
+
+\noindent 
 
 \end{document}
