--- a/Unicorn - A System for Searching the Social Graph.tex
+++ b/Unicorn - A System for Searching the Social Graph.tex
@@ -11,7 +11,7 @@
 
 \begin{document}
 
-\section{Unicorn: A System for Searching the Social Graph}
+\section*{Unicorn: A System for Searching the Social Graph}
 
 The domain area of [Curtiss et al.] is social graph search and retrieval. Unicorn is a in-memory indexing system developed by Facebook Inc. used for social graph retrieval and social ranking. It is built to support trillions of edges, billions of users and thousands of servers. Unicorn also supports real-time updates, per-edge privacy (even though privacy is enforced by the front-end) while serving billions of queries each day at low latencies.\\
 
