--- a/Unicorn - A System for Searching the Social Graph.tex
+++ b/Unicorn - A System for Searching the Social Graph.tex
@@ -17,6 +17,12 @@ The domain area of [Curtiss et al.] is social graph search and retrieval. Unicor
 
 \noindent According to [Curtiss et al.] there exist similar search indexing systems, but no one that is initially built to support social graph search and with the scale of Unicorn both in data volume and query volume. Hence, the motivation behind Unicorn was to build a indexing system specific for social graph purposes. By building a specialized indexing system for the Facebook back-end, Facebook-specific properties could be incorporated into the design. Hence, choices such as representing the social graph as an adjacency list because of observations that the social graph is sparse (average number of friends is 130) \textcolor{red}{The paper says that the motivation is in section 2-5, but I'm not sure if this should rather be in the ''techniques section"}.\\
 
+\noindent The application of Unicorn is, of course, to be the back-end of Facebook's search engine. Unicorn should however be possible to use for different types of Internet graph search where nodes represent entities and edges represents relationships between those entities. As mentioned earlier, \textcolor{red}{If I remove it from the paragraph above I need to rewrite this.} Unicorn is implemented to optimize search in the Facebook social graph, and therefore lots of design choices are based on Facebook-specific properties. Unicorn would therefore be most useful for applications where the graph structure, data model, and query logic is similar. 
+
+%Data is stored so that quer can be done at index level..... and representations is based on graph properties... metadata
+
+as long as they share similar properties with the Facebook social graph. 
+
 \noindent There is no doubt that Facebook is an extremely successful company, and it is very hard to criticize a system which so many people love to use everyday, myself included. However, I do have some criticism when it comes to how Unicorn is presented in the paper. The paper is written more as a sales-pitch for Unicorn than an actual research paper. Although it briefly mentions other systems in the ''Related Work'' section it does not compare its performance with any of these systems. When explaining different angels of trying to implement friends-of-friends efficiently for example, they only compare their proposals to the most basic, brute-force solution, of storing friends-of-friend as a separate list for each user. I also miss an acknowledgement of short-comings and future improvements. As an example, they briefly mention that letting the front-end deal with privacy filtering imposes an modest efficiency penalty, but then they jump right to defending this choice, without any deliberation about how this could be handled differently. Despite these remarks, Unicorn is a system developed for a huge real-world application, to support changing needs and growing scale and it works. Researches working for such an company do not have all the time in the world to implement and compare hundred different systems and compare their performance, their job is to supply costumers with what they need and want when they need it, and that is what they do.
 
 % Built with facebook in mind. Social graph space, even trilling of edges - therefore adjecency list.
